add post users endpoint
